--- a/portal/classification/printlist/defaultList.html
+++ b/portal/classification/printlist/defaultList.html
@@ -16,7 +16,7 @@
   	<tr>
     	<td class="small-font system-default" rowspan="2">ردیف</td>
     	<td class="small-font system-default" rowspan="2">نام و نام خانوادگی</td>
-    	<td class="small-font system-default" rowspan="2">نام کاربری</td>
+    	<td class="small-font system-default" rowspan="2">شماره پرونده</td>
         <td class="small-font system-default">روز</td>
         <td class="small-font system-default">...شنبه</td>
         <td class="small-font system-default">...شنبه</td>
