hasan we like you

--- a/portal/score/calculation/option/display.html
+++ b/portal/score/calculation/option/display.html
@@ -10,8 +10,8 @@
 </style>
 
 <span class="list">
-<h3>نوع امتیاز</h3>
-	
+	<h3>نوع امتیاز</h3>
+	<list id="list"></list>
 </span>
 <form class="ajx" method="post" action="score/calculation/{{global.url}}">
 	{{forms.make(form.score_calculation)}}
