--- a/portal/classification/printlist/hefzList.html
+++ b/portal/classification/printlist/hefzList.html
@@ -123,7 +123,7 @@
 		</tr>
 		<tr>
 
-			<td class="normal-font">{{list.phone}}</td>
+			<td class="normal-font"><span class="bridge">{{list.phone}}</span></td>
 			<td class="small-font system-default" >20 درس</td>
 			<td class="colory"></td>
 			<td></td>
@@ -139,7 +139,7 @@
 			<td></td>
 		</tr>
 		<tr>
-			<td class="normal-font">{{list.mobile}}</td>
+			<td class="normal-font"><span class="bridge">{{list.mobile}}</span></td>
 			<td class="small-font system-default" >مرور 2</td>
 			<td class="colory"></td>
 			<td></td>
