--- a/portal/report/option/display.html
+++ b/portal/report/option/display.html
@@ -1,8 +1,8 @@
 {# Reza Mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {%block content%}
-<form class="ajx" method="post" action="reprot/{{global.url}}">
-	{{forms.make(form.reprot)}}
+<form class="ajx" method="post" action="report/{{global.url}}">
+	{{forms.make(form.report)}}
 </form>
 {{dtable.make(dataTable)}}
 {%endblock%}
