--- a/portal/report/classes/display.html
+++ b/portal/report/classes/display.html
@@ -1,7 +1,13 @@
 {# reza mohiti #}
 {% extends layout %}
 {% block content %}
-<a href="" class="start-report a-undefault" target="_blank"> شروع گزارش </a>
-<br>
+<form method ="post" action ="" class=" ">
+	{{forms.make(report_list)}}
+</form>
+
+<!-- <br> -->
+<!-- <a href="" class="start-report a-undefault" target="_blank"> شروع گزارش </a> -->
+<!-- <br> -->
+
 {{dtable.make(dataTable)}}
 {%endblock%}
