--- a/portal/report/classes/display.html
+++ b/portal/report/classes/display.html
@@ -1,7 +1,8 @@
 {# reza mohiti #}
 {% extends layout %}
 {% block content %}
-<form method ="post" action ="" class=" ">
+<form method ="post"  class="notajx" id="report_form">
+	<input type="hidden" class="start-report">
 	{{forms.make(report_list)}}
 </form>
 
