--- a/portal/report/price/display.html
+++ b/portal/report/price/display.html
@@ -1,7 +1,7 @@
 {# reza mohiti #}
 {% extends layout %}
 {% block content %}
-<form method ="post" action ="" class=" ">
+<form method ="post" action ="" id= "report_form">
 	{{forms.make(report_list)}}
 </form>
 {%endblock%}
