--- a/portal/score/show/display.html
+++ b/portal/score/show/display.html
@@ -1,10 +1,9 @@
 {% extends layout %}
 {% block content %}
-<h3>ثبت نمرات {{global.score_type}} کلاس</h3>
 <!-- classes detail -->
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
 </div>
 <br>
-{{tagMaker.detail(a)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
