--- a/portal/users/learn/display.html
+++ b/portal/users/learn/display.html
@@ -5,5 +5,6 @@
 {{tagMaker.card(price)}}
 {{tagMaker.card(classification)}}
 {{tagMaker.card(absence)}}
+{{tagMaker.card(score)}}
 {{tagMaker.card(certification)}}
 {%endblock%}
