--- a/portal/classification/printlist/display.html
+++ b/portal/classification/printlist/display.html
@@ -41,7 +41,7 @@
 			$(".bridge").css("display", "none");
 		}else{
 			$(this).val("checked");
-			$(".bridge").css("display", "block");
+			$(".bridge").css("display", "");
 		}	
 	});
 	</script>
