--- a/portal/classification/printlist/scoreList.html
+++ b/portal/classification/printlist/scoreList.html
@@ -61,7 +61,7 @@
         {%endfor%}
 
         <td class="small-font system-default clst" rowspan="2">نتیجه</td>
-        <td class="small-font system-default clst" rowspan="2"><span class="bridge">شماره تماس</span></td>
+        <td class="small-font system-default clst bridge" rowspan="2"><span>شماره تماس</span></td>
         <td class="small-font system-default clse" rowspan="2">توضیحات</td>
     </tr>
     <tr>
@@ -85,7 +85,7 @@
             {%endfor%}
 
         <td class="small-font system-default clst" rowspan="2"></td>
-            <td class="normal-font clst"><span class="bridge">{{list.phone}}</span></td>
+            <td class="normal-font clst bridge"><span>{{list.phone}}</span></td>
             <td rowspan="2" class="clse"></td>
         </tr>
         <tr>
@@ -94,7 +94,7 @@
                  <td></td>
             {%endfor%}
       
-            <td class="normal-font"><span class="bridge">{{list.mobile}}</span></td>
+            <td class="normal-font bridge"><span>{{list.mobile}}</span></td>
         </tr>
     </tbody>
     {%endfor%}
