--- a/portal/classification/printlist/defaultList.html
+++ b/portal/classification/printlist/defaultList.html
@@ -70,7 +70,7 @@
 		<td class="small-font system-default cslc">...شنبه</td>
 		<td class="small-font system-default cslc">...شنبه</td>
 		<td class="small-font system-default cslc">...شنبه</td>
-		<td class="small-font system-default clst" rowspan="2"><span class="bridge">شماره تماس</span></td>
+		<td class="small-font system-default clst bridge" rowspan="2"><span >شماره تماس</span></td>
 		<td class="small-font system-default clse" rowspan="2">توضیحات</td>
 	</tr>
 	<tr>
@@ -115,7 +115,7 @@
 			<td class="colory cslc"></td>
 			<td class="colory cslc"></td>
 			<td class="colory cslc"></td>
-			<td class="normal-font clst"><span class="bridge">{{list.phone}}</span></td>
+			<td class="normal-font clst bridge"><span >{{list.phone}}</span></td>
 			<td rowspan="2" class="clse"></td>
 		</tr>
 		<tr>
@@ -135,7 +135,7 @@
 			<td></td>
 			<td></td>
 			<td></td>
-			<td class="normal-font"><span class="bridge">{{list.mobile}}</span></td>
+			<td class="normal-font bridge"><span>{{list.mobile}}</span></td>
 		</tr>
 	</tbody>
 	{%endfor%}
