--- a/portal/classes/done/display.html
+++ b/portal/classes/done/display.html
@@ -15,6 +15,7 @@
 <p>
 	امکان ثبت درخواست گواهی نامه از طرف فراگیرانی که امتیاز قبولی را کسب کرده اند بعد از ثبت اتمام کلاس فعال می شود.
 </p>
+
 <style type="text/css">
 	.classes-done {
 		/*height: 75px;*/
@@ -31,7 +32,7 @@
 	}
 </style>
 <a href="">
-	<div class="classes-done">
+	<div class="classes-done" classesid="{{global.classesid}}">
 	ثبت اتمام کلاس
 	</div>
 </a>
