--- a/portal/score/classes/display.html
+++ b/portal/score/classes/display.html
@@ -5,6 +5,6 @@
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
 </div>
-<br>
-{{tagMaker.detail(a)}}
+
+{{tagMaker.detail(score_type_list)}}
 {%endblock%}
