--- a/portal/users/learn/display.html
+++ b/portal/users/learn/display.html
@@ -3,7 +3,7 @@
 {%block content%}
 
 <p style="display: block; clear: both">
-	<b>	وضعیت پرونده فراگیر :</b> لیست کلاس های شرکت کرده ، نمرات، غیبت ها، گواهی نامه
+	<b>	وضعیت پرونده فراگیر {{global.name}} :</b> لیست کلاس های شرکت کرده ، نمرات، غیبت ها، گواهی نامه
 </p>
 {{dtable.make(dataTable)}}
 {{tagMaker.card(olddb)}}
