--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -1,7 +1,17 @@
 {% extends layout %}
 {% block content %}
+<style type="text/css">
+	#show-users-list {
+		padding: 5px;
+		clear: both;
+		background-color: #aaa;
+		display: inline-block;
+		margin: 2px 10px 10px auto;
+		border-radius: 5px;
 
-<a href="users/status=list" target="_blank" >نمایش افراد جهت ثبت در کلاس</a>
+	}
+</style>
+<a id="show-users-list" href="users/status=list" target="_blank" >نمایش افراد جهت ثبت در کلاس</a>
 
 <!-- classes detail -->
 <div class="class-detail">
