--- a/portal/report/classes/display.html
+++ b/portal/report/classes/display.html
@@ -2,7 +2,7 @@
 {% extends layout %}
 {% block content %}
 <form method ="post"  class="notajx" id="report_form">
-	<input type="hidden" class="start-report">
+	<input type="hidden" name="path-url" value="{{global.url}}">
 	{{forms.make(report_list)}}
 </form>
 
