--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -106,6 +106,7 @@
 		}
 	</style>
 	<div class="top-tape"></div>
+		<div class="title"></div>
 	<div class="header-portal">
 		<div class="shamseh">
 			<div class="shamseh-noghte">
