--- a/portal/price/option/display.html
+++ b/portal/price/option/display.html
@@ -10,7 +10,7 @@
 </h3>
 
 <form class="ajx" method="post" action="price/{{global.url}}">
-	{{forms.make(form.price)}}
+	{{forms.make(form.userprice)}}
 </form>
 
 {%endblock%}
