--- a/portal/price/option/display.html
+++ b/portal/price/option/display.html
@@ -1,16 +1,9 @@
 {# reza mohiti #}
 {% extends layout %}
 {% block content %}
-<h3>
-<a href="price/status=detail/usersid={{global.usersid}}">نمایش </a>
-یا
-<a href="price/status=add/usersid={{global.usersid}}">افزودن</a>
- شهریه برای فراگیر 
-<a href="users/learn/id={{global.usersid}}"> {{global.name}}</a>
-</h3>
-
+<h4>{{global.status}} شهریه برای فراگیر {{global.name}}</h4>
 <form class="ajx" method="post" action="price/{{global.url}}">
-	{{forms.make(form.userprice)}}
+	{{forms.make(form.price)}}
 </form>
 
 {%endblock%}
