--- a/portal/main/display.html
+++ b/portal/main/display.html
@@ -56,6 +56,7 @@
 	<script src="static/js/jquery.multiple.select.js"></script>
 
 	<script type="text/javascript" src="{{"static/js/banoo.min.js"|fcache}}"></script>
+	<!-- <script type="text/javascript" src="static/js/common.js"></script> -->
 	<style type="text/css">
 		<style>
 			.dataTable {
