set file upload contrller & tags ...

--- a/portal/files/tagOption/display.html
+++ b/portal/files/tagOption/display.html
@@ -1,7 +1,7 @@
 {# reza mohiti rm.biqarar@gmail.com #}
 {% extends layout %}
 {% block content %}
-<form class="ajx" method="post" action="files/tag/add">
+<form class="ajx" method="post" action="files/type=tag/status=add">
 	{{forms.make(form.file_tag)}}
 </form>
 {{dtable.make(dataTable)}}
