--- a/portal/files/option/display.html
+++ b/portal/files/option/display.html
@@ -1,7 +1,7 @@
 {% extends layout %}
 {% block content %}
 <form class="ajx" method="post" action="files/{{global.url}}" enctype="multipart/form-data">
-	{{forms.make(form.files)}}
+	{{forms.make(files)}}
 </form>
 {%if debug.msg is defined%}
 	<a href="files/get/{{debug.msg.id}}/{{debug.msg.title}}">دریاف فایل</a>
