--- a/portal/main/xhr.html
+++ b/portal/main/xhr.html
@@ -6,6 +6,20 @@
 {% endif %}
 {% import macro.list as tagMaker %}
 <div id="content">
+{%if topLinks%}
+<div class="top-links">
+	<div class="top-links-icon"></div>
+	<div class="top-links-wrapper">
+		{%for link in topLinks%}
+		<span class="top-links-span">
+			<a href="{{link.url}}">
+				{{link.title|raw}}
+			</a>
+		</span>
+		{%endfor%}
+	</div>
+</div>
+{%endif%}
 {%block content%}
 {%endblock%}
 </div>
