--- a/portal/course/option/display.html
+++ b/portal/course/option/display.html
@@ -4,5 +4,5 @@
 <form class="ajx" method="post" action="course/{{global.url}}">
 	{{forms.make(form.course)}}
 </form>
-{{tagMaker.list(list)}}
+{{dtable.make(dataTable)}}
 {%endblock%}
