--- a/portal/course/courseclasses/display.html
+++ b/portal/course/courseclasses/display.html
@@ -10,9 +10,11 @@
 	.courseclasses-item {
 		background:#ececec;
 		padding: 5px;
+		display: inline-block;
 		border-radius: 3px;
-		margin: 5px;
+		margin: 1px;
 	}
+	
 </style>
 <form class="ajx" method="post" action="courseclasses/{{global.url}}">
 	{{forms.make(form.courseclasses)}}
