--- a/portal/score/score/display.html
+++ b/portal/score/score/display.html
@@ -1,14 +1,19 @@
 {% extends layout %}
 {% block content %}
+{%if msg%}
+	{{msg}}
+{%else%}
 <div class="class-detail">
 	{{ tagMaker.list(list) }}
 </div>
-{{tagMaker.detail(score_type_list)}}
 
-<h3>ثبت نمرات {{global.score_type}} کلاس</h3>
-<!-- classes detail -->
-<!-- classes list -->
-<div class="class-detail">
-	{{dtable.make(dataTable)}}
-</div>
+	{{tagMaker.detail(score_type_list)}}
+
+	<h3>ثبت نمرات {{global.score_type}} کلاس</h3>
+	<!-- classes detail -->
+	<!-- classes list -->
+	<div class="class-detail">
+		{{dtable.make(dataTable)}}
+	</div>
+{%endif%}
 {%endblock%}
