--- a/portal/classification/classes/display.html
+++ b/portal/classification/classes/display.html
@@ -4,7 +4,7 @@
 	#show-users-list {
 		padding: 5px;
 		clear: both;
-		background-color: #aaa;
+		background-color: #ececec;
 		display: inline-block;
 		margin: 2px 10px 10px auto;
 		border-radius: 5px;
